[Front-End[Config] - [Criação de Boletim junto com as Unidades]

--- a/css/style.css
+++ b/css/style.css
@@ -637,3 +637,10 @@ a:hover {
 }
 /*-- //tela de endereço --*/
 /*-------------------------------------------------------tela FormulÃ¡rio-----------------------------------------------------------------------*/
+
+/*------------------------------------------------------tela Boletim -----------------------------------------------------------------------*/
+.telaBoletim .panel-heading:hover{
+	background-color: #000 !important;
+	color: #fff !important;
+}
+/*------------------------------------------------------//tela Boletim -----------------------------------------------------------------------*/
